--- a/style.css
+++ b/style.css
@@ -1,22 +1,41 @@
+html{
+    box-sizing: border-box;
+}
+
+*{
+    outline: 1px solid red;
+    box-sizing: inherit;
+}
+
 h1{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-align: center;
     color: darkcyan;
     background-color: bisque;
     font-size: 32px;
+    border: 10px groove greenyellow;
 }
 
 body{
     background-color: aquamarine;
 }
 
+ul{
+    display: inline-flex;
+    list-style: none;
+    block-size: 100px;
+    height: 50px;
+}
+
 .button{
     font-family: Arial, Helvetica, sans-serif;
     background-color: bisque;
-    border: 2px greenyellow;
     font-size: 25px;
-    display: inline-block;
-    text-align: center;
-    list-style-type: none;
-    margin-left: 70px;
+    display: flex;
+    margin-left: 200px;
+    border: 10px groove greenyellow;
+}
+
+.button:hover{
+    border: 10px groove rebeccapurple;
 }
