--- a/style.css
+++ b/style.css
@@ -2,22 +2,21 @@ html{
     box-sizing: border-box;
 }
 
-*{
-    outline: 1px solid red;
+*, *:before, *:after {
     box-sizing: inherit;
 }
 
 h1{
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     text-align: center;
-    color: darkcyan;
-    background-color: bisque;
-    font-size: 32px;
-    border: 10px groove greenyellow;
+    background-color: #92b6dd;
+    padding: 30px;
+    font-size: 60px;
 }
 
 body{
-    background-color: aquamarine;
+    background-color: #acc8e5;
+    color: #112a46;
 }
 
 ul{
@@ -28,14 +27,14 @@ ul{
 }
 
 .button{
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: bisque;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    background-color: #92b6dd;
     font-size: 25px;
     display: flex;
     margin-left: 200px;
-    border: 10px groove greenyellow;
+    padding-top: 10px;
 }
 
 .button:hover{
-    border: 10px groove rebeccapurple;
+    color: #112a46;
 }
